--- a/library-events-producer/src/main/resources/application.yml
+++ b/library-events-producer/src/main/resources/application.yml
@@ -1,26 +1,6 @@
 spring:
   profiles:
-    active: remote
-
----
-spring:
-  config:
-    activate:
-      on-profile: remote
-  kafka:
-    template:
-      default-topic: library-events
-    producer:
-      bootstrap-servers: 192.168.0.107:9092,192.168.0.107:9093,192.168.0.107:9094
-      key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      properties:
-        acks: all
-        retries: 10
-        retry.backoff.ms: 1000
-    admin:
-      properties:
-        bootstrap.servers: 192.168.0.107:9092,192.168.0.107:9093,192.168.0.107:9094
+    active: local
 
 ---
 spring:
@@ -31,29 +11,33 @@ spring:
     template:
       default-topic: library-events
     producer:
-      bootstrap-servers: localhost:9095,localhost:9096,localhost:9097
+      bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      ssl:
-        trust-store-location: file:/Dilip/udemy/kafka-for-developers-using-spring-boot/ssl/client.truststore.jks
-        trust-store-password: password
-        key-store-location: file:/Dilip/udemy/kafka-for-developers-using-spring-boot/ssl/client.keystore.jks
-        key-store-password: password
       properties:
         acks: all
         retries: 10
         retry.backoff.ms: 1000
-        security:
-          protocol: SSL
-        ssl.endpoint.identification.algorithm:
+    admin:
+      properties:
+        bootstrap.servers: localhost:9092
 
 ---
 spring:
   config:
     activate:
-      on-profile: prod
+      on-profile: remote
   kafka:
+    template:
+      default-topic: library-events
     producer:
-      bootstrap-servers: prod:9092
+      bootstrap-servers: home_server:9092, home_server:9093, home_server:9094
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        acks: all
+        retries: 10
+        retry.backoff.ms: 1000
+    admin:
+      properties:
+        bootstrap.servers: home_server:9092
